<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">Save</string>
    <string name="web_client_id" translatable="false">741316235729-ohg8quvto8ajl8qpil4r9rm1o3gfml3t.apps.googleusercontent.com</string>
    <string name="title_activity_first_start">First Start</string>
    <string name="default_tags" translatable="false">OpenArchive</string>
    <string name="action_settings">Settings</string>
    <string name="internet_archive">Internet Archive</string>
    <string name="internet_archive_description">Upload your media to a free public account on the Internet Archive.</string>
    <string name="dweb_title">DWeb Storage</string>
    <string name="dweb_description">Connect to the decentralized web</string>
    <string name="servers">Servers</string>
    <string name="add_server">Add Server</string>
    <string name="lbl_rename_folder">Rename Folder</string>
    <string name="lbl_select_media">Select media</string>
    <string name="lbl_remove_folder">Remove folder</string>
    <string name="popup_archive_folder">Archive folder</string>
    <string name="popup_remove_folder">Remove folder from app</string>
    <string name="folder_empty_warning">Folder name cannot be empty</string>
    <string name="folder_rename_success">Folder renamed</string>
    <string name="folder_not_found">Folder not found</string>
    <string name="folder_removed">Folder removed</string>
    <string name="folder_archived">Folder archived successfully…</string>
    <string name="content_picker_label">Add media from</string>
    <string name="disable_passcode_dialog_title">Disable Passcode</string>
    <string name="disable_passcode_dialog_msg">Are you sure you want to disable the passcode?</string>
    <string name="tor_notification_title">Tor Network</string>
    <string name="tor_notification_connecting">Connecting to Tor network…</string>
    <string name="tor_notification_connected">Connected to Tor network</string>
    <string name="tor_notification_channel_name">Tor Service</string>
    <string name="tor_notification_channel_description">Notifications for the embedded Tor service</string>
    <string name="tor_status_connecting">Connecting to Tor…</string>
    <string name="tor_status_verifying">Connected, verifying routing…</string>
    <string name="tor_status_connected">Connected to Tor network</string>
    <string name="tor_status_verified">Connected, verified.\nExit: %1$s</string>
    <string name="tor_status_verified_with_country">Connected, verified.\nExit: %1$s - %2$s</string>
    <string name="tor_status_error">Tor error: %1$s</string>
    <string name="error_tor_not_ready">Tor is not yet connected. Please wait for Tor to finish connecting and try again.</string>
    <string name="error_network_timeout">Connection timed out. Please check your network and try again.</string>
    <string name="error_network_unavailable">Network error. Please check your connection and try again.</string>
    <string name="error_server_unavailable">Internet Archive is temporarily unavailable. Please try again later.</string>
    <string name="tor_notification_permission_title">Notification Permission</string>
    <string name="tor_notification_permission_message">To show Tor connection status in your notification bar, Save needs notification permission. You can still use Tor without this permission.</string>
    <string name="tor_disabled_title">Onion routing under development</string>
    <string name="tor_disabled_message">This feature is currently under development. For now, you can use Orbot or any VPN of your choice to enhance your privacy and security.</string>
    <string name="tor_download_btn_label">Download Orbot</string>
    <string name="lbl_Cancel">Cancel</string>
    <string name="lbl_ok">OK</string>
    <string name="lbl_confirm">Confirm</string>
    <string name="lbl_remove">Remove</string>
    <string name="lbl_retry">Retry</string>
    <string name="license_label">License</string>
    <string name="info_license_cc0">Waive all restrictions, requirements, and attribution (CC0).</string>
    <string name="info_license_deriv">Allow anyone to remix and share?</string>
    <string name="info_license_sharealike">Require them to share like you have?</string>
    <string name="info_license_comm">Allow commercial use?</string>
    <string name="menu_delete">Remove Media</string>
    <string name="menu_delete_desc">This media will be removed from Save.\nIt will remain on the server and in your Photos app.</string>
    <string name="hint_flag">Tap to flag as significant content</string>
    <string name="answer_yes">Yes</string>
    <string name="answer_no">No</string>
    <string name="action_cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="prefs_use_tor_title">Turn on Onion Routing</string>
    <string name="prefs_use_tor_summary">Transfer via the Tor Network only</string>
    <string name="prefs_theme_system" translatable="false">System Controlled</string>
    <string name="prefs_theme_light" translatable="false">Light</string>
    <string name="prefs_theme_dark" translatable="false">Dark</string>
    <string name="prefs_theme_val_system" translatable="false">system</string>
    <string name="prefs_theme_val_light" translatable="false">light</string>
    <string name="prefs_theme_val_dark" translatable="false">dark</string>
    <string name="prompt_username"><i>Username</i></string>
    <string name="prompt_email">Email</string>
    <string name="prompt_email_italics"><i>Email</i></string>
    <string name="prompt_password"><i>Password</i></string>
    <string name="label_username">@string/prompt_email</string>
    <string name="placeholder_email_or_username">Enter an email or username</string>
    <string name="label_password">@string/prompt_password</string>
    <string name="placeholder_password">Enter a password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_incorrect_username_or_password">Incorrect username or password</string>
    <string name="error_incorrect_email_or_password">Incorrect email or password</string>
    <string name="error_field_required">This field is required</string>
    <string name="importing_media">Importing media…</string>
    <string name="title_welcome">Welcome!</string>
    <string name="action_privacy">Privacy Policy</string>
    <string name="action_about">About %s</string>
    <string name="add_a_folder">Add a Folder</string>
    <string name="browse_existing_folders">Browse Existing Folders</string>
    <string name="browse_existing">Browse Existing</string>
    <string name="title_activity_upload_manager">Upload Manager</string>
    <string name="uploads">Uploads</string>
    <string name="upload_manager_screen_title">Edit Queue</string>
    <string name="upload_manager_screen_subtitle">Uploading is paused</string>
    <string name="uploading">Uploading…</string>
    <string name="uploading_left">Uploading… (%d left)</string>
    <string name="uploads_notification_descriptions">These notifications show up while this app is performing media uploads.</string>
    <string name="action_upload">Upload</string>
    <string name="in_app_update_ready" translatable="false">A new version is ready to install.</string>
    <string name="in_app_update_restart" translatable="false">Restart</string>
    <string name="multiple_failed_attempts_message">App is locked due to multiple failed attempts. Please try again later.</string>
    <string name="passcode_not_set">Passcode not set</string>
    <string name="passcode_remaining_attempts">Incorrect passcode. %1$d attempts remaining.</string>
    <string name="passcode_too_many_failed_attempts">Too many failed attempts. App is locked.</string>
    <string name="passcode_lock_app">Lock app with passcode</string>
    <string name="enter_passcode">Enter Your Passcode</string>
    <string name="passcode_do_not_match">Passcodes do not match. Try again.</string>
    <string name="confirm_passcode">Confirm Passcode</string>
    <string name="set_passcode">Set Passcode</string>
    <string name="set_passcode_warning">Make sure you remember this pin. If you forget it, you will need to reset the app, and all in-app data will be erased.</string>
    <string name="folder_renamed">Folder renamed</string>
    <string name="tap_to_add">Tap the button below to add media</string>
    <string name="tap_to_add_folder">Tap the button below to add a folder</string>
    <string name="tap_to_add_server">Tap the button below to add a server</string>
    <string name="to_get_started_connect_to_a_server_to_store_your_media">To get started, connect to a server to store your media.</string>
    <string name="to_get_started_more_hint_dweb">You can add multiple private servers and\none IA or DWeb Storage account at any time.</string>
    <string name="to_get_started_more_hint">You can add multiple private servers and \n one IA account \nat any time.</string>
    <string name="send_directly_to_a_private_server">Connect to a secure\nWebDAV server</string>
    <string name="upload_to_the_internet_archive">Connect to a free\npublic server</string>
    <string name="action_next">Next</string>
    <string name="create_new_folder_title">Please name your folder</string>
    <string name="create_new_folder_subtitle">This folder will be created on your server and added to Save.</string>
    <string name="create_new_folder_hint"><i>Enter folder name</i></string>
    <string name="server_name_optional"><i>Server Name (Optional)</i></string>
    <string name="folder_name">Folder Name</string>
    <string name="create">Create</string>
    <string name="back">Back</string>
    <string name="only_upload_media_when_you_are_connected_to_wi_fi">Only upload media when you are connected to Wi-Fi</string>
    <string name="learn_more_about_creative_commons">Learn more about Creative Commons.</string>
    <string name="pref_title_secure">Secure</string>
    <string name="pref_title_archive">Archive</string>
    <string name="pref_title_privacy_policy">Terms &amp; Privacy Policy</string>
    <string name="pref_title_media_servers">Media Servers</string>
    <string name="pref_title_media_folders">Archived Folders</string>
    <string name="pref_summary_media_servers">Manage your servers</string>
    <string name="pref_summary_media_folders">Manage your archived folders</string>
    <string name="pref_summary_privacy_policy">Tap to view our Terms &amp; Privacy Policy</string>
    <string name="pref_media_servers" translatable="false">pref_media_servers</string>
    <string name="pref_media_folders" translatable="false">pref_media_folders</string>
    <string name="pref_key_about_app" translatable="false">pref_about_app</string>
    <string name="pref_key_privacy_policy" translatable="false">pref_privacy_policy</string>
    <string name="pref_key_app_version" translatable="false">pref_app_version</string>
    <string name="pref_app_passcode" translatable="false">passcode_enabled</string>
    <string name="pref_key_use_tor" translatable="false">pref_use_tor</string>
    <string name="pref_key_use_dark_mode" translatable="false">pref_is_dark_mode</string>
    <string name="use_c2pa">Enable C2PA Provenance</string>
    <string name="use_c2pa_summary">Generate cryptographic proofs for media authenticity using C2PA standard</string>
    <string name="c2pa_signing">Signing Configuration</string>
    <string name="proofmode">Proofmode</string>
    <string name="c2pa_signing_key">Signing Key</string>
    <string name="c2pa_signing_key_summary">Configure cryptographic signing key for C2PA manifests</string>
    <string name="c2pa_about_title">About C2PA</string>
    <string name="c2pa_about_summary">C2PA provides cryptographic proof of media authenticity and origin. Manifests are stored as separate .c2pa.json files to preserve original file integrity.</string>
</resources>