<?xml version="1.0" encoding="UTF-8" ?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <PreferenceCategory
        android:layout="@layout/custom_preference_category"
        android:title="@string/pref_title_secure"
        app:allowDividerAbove="true">

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:icon="@null"
            android:iconSpaceReserved="false"
            android:key="@string/pref_app_passcode"
            android:layout="@layout/custom_preference_switch"
            android:singleLineTitle="false"
            android:title="Lock app with passcode"
            android:widgetLayout="@layout/custom_preference_widget_switch"
            app:icon="@null"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/custom_preference_category"
        android:title="@string/pref_title_archive"
        app:allowDividerAbove="true">

        <SwitchPreferenceCompat
            android:iconSpaceReserved="false"
            android:key="upload_wifi_only"
            android:layout="@layout/custom_preference_switch"
            android:singleLineTitle="false"
            android:title="@string/only_upload_media_when_you_are_connected_to_wi_fi"
            android:widgetLayout="@layout/custom_preference_widget_switch"
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <Preference
            android:iconSpaceReserved="false"
            android:key="@string/pref_media_servers"
            android:layout="@layout/custom_preference"
            android:singleLineTitle="true"
            android:summary="@string/pref_summary_media_servers"
            android:title="@string/pref_title_media_servers"
            app:iconSpaceReserved="false"
            app:summary="@string/pref_summary_media_servers"
            app:title="Media Servers" />

        <Preference
            android:iconSpaceReserved="false"
            android:key="@string/pref_media_folders"
            android:layout="@layout/custom_preference"
            android:singleLineTitle="true"
            android:summary="@string/pref_summary_media_folders"
            android:title="@string/pref_title_media_folders"
            app:iconSpaceReserved="false" />

        <!--        <ListPreference-->
        <!--            android:iconSpaceReserved="false"-->
        <!--            android:key="media_compression"-->
        <!--            android:singleLineTitle="true"-->
        <!--            android:summary="%s"-->
        <!--            android:title="Media Compression"-->
        <!--            app:allowDividerAbove="true"-->
        <!--            app:allowDividerBelow="false"-->
        <!--            app:defaultValue="higher_quality"-->
        <!--            app:enabled="false"-->
        <!--            app:entries="@array/array_prefs_media_compression_labels"-->
        <!--            app:entryValues="@array/array_prefs_media_compression_values"-->
        <!--            app:iconSpaceReserved="false" />-->

    </PreferenceCategory>

    <PreferenceCategory
        android:iconSpaceReserved="false"
        android:layout="@layout/custom_preference_category"
        android:title="Verify"
        app:iconSpaceReserved="false">

        <Preference
            android:iconSpaceReserved="false"
            android:key="@string/pref_key_proof_mode"
            android:layout="@layout/custom_preference"
            android:singleLineTitle="false"
            android:title="@string/proofmode"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/custom_preference_category"
        android:title="Encrypt">

        <SwitchPreferenceCompat
            android:enabled="false"
            android:iconSpaceReserved="false"
            android:key="@string/pref_key_use_tor"
            android:layout="@layout/custom_preference_switch"
            android:singleLineTitle="false"
            android:summary="@string/prefs_use_tor_summary"
            android:title="@string/prefs_use_tor_title"
            android:widgetLayout="@layout/custom_preference_widget_switch"
            app:defaultValue="false"
            app:enabled="true"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>


    <PreferenceCategory
        android:layout="@layout/custom_preference_category"
        android:title="General">

        <!--        <ListPreference-->
        <!--            android:dialogTitle="Theme"-->
        <!--            android:iconSpaceReserved="false"-->
        <!--            android:key="theme"-->
        <!--            android:singleLineTitle="false"-->
        <!--            android:summary="%s"-->
        <!--            android:title="@string/prefs_theme_title"-->
        <!--            app:defaultValue="@string/prefs_theme_val_system"-->
        <!--            app:entries="@array/ar_prefs_theme_labels"-->
        <!--            app:entryValues="@array/ar_prefs_theme_val"-->
        <!--            app:iconSpaceReserved="false"-->
        <!--            app:useSimpleSummaryProvider="true" />-->

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:icon="@null"
            android:iconSpaceReserved="false"
            android:key="@string/pref_key_use_dark_mode"
            android:layout="@layout/custom_preference_switch"
            android:singleLineTitle="true"
            android:title="Switch to dark mode"
            android:widgetLayout="@layout/custom_preference_widget_switch"
            app:icon="@null"
            app:iconSpaceReserved="false" />

        <Preference
            android:iconSpaceReserved="false"
            android:key="@string/pref_key_about_app"
            android:layout="@layout/custom_preference"
            android:singleLineTitle="true"
            android:summary="Discover the Save app"
            android:title="Save by Open Archive"
            app:enabled="true"
            app:iconSpaceReserved="false">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://open-archive.org/save" />
        </Preference>

        <Preference
            android:iconSpaceReserved="false"
            android:key="@string/pref_key_privacy_policy"
            android:layout="@layout/custom_preference"
            android:singleLineTitle="true"
            android:summary="@string/pref_summary_privacy_policy"
            android:title="@string/pref_title_privacy_policy"
            app:enabled="true"
            app:iconSpaceReserved="false">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://open-archive.org/privacy" />
        </Preference>

        <Preference
            android:iconSpaceReserved="false"
            android:key="@string/pref_key_app_version"
            android:layout="@layout/custom_preference"
            android:singleLineTitle="true"
            android:title="Version"
            app:enabled="false"
            app:iconSpaceReserved="false"
            tools:summary="0.7.2.4783" />

    </PreferenceCategory>

    <!--    <PreferenceCategory-->
    <!--        android:layout="@layout/custom_preference_category"-->
    <!--        android:title="About">-->


    <!--    </PreferenceCategory>-->

</PreferenceScreen>