<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/license_chooser"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:filterTouchesWhenObscured="true"
    android:gravity="top"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".features.onboarding.SpaceSetupActivity"
    tools:background="@color/colorBackground"
    tools:showIn="@layout/fragment_webdav_setup_license">

    <!-- Main CC License Switch -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/sw_cc_enabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:checked="false"
            android:showText="true"
            android:textOff="@string/answer_no"
            android:textOn="@string/answer_yes" />

        <TextView
            android:id="@+id/tv_cc_label"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/set_unique_creative_commons_licenses_for_each_individual_folder_on_this_server"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </RelativeLayout>

    <!-- Allow Remix Switch -->
    <RelativeLayout
        android:id="@+id/row_allow_remix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/sw_allow_remix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:checked="true"
            android:showText="true"
            android:textOff="@string/answer_no"
            android:textOn="@string/answer_yes" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/info_license_deriv"
            android:textAppearance="?android:attr/textAppearanceSmall"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <!-- Require Share Alike Switch -->
    <RelativeLayout
        android:id="@+id/row_share_alike"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/sw_require_share_alike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:checked="false"
            android:gravity="center_vertical"
            android:textOff="@string/answer_no"
            android:textOn="@string/answer_yes" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/info_license_sharealike"
            android:textAppearance="?android:attr/textAppearanceSmall"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <!-- Allow Commercial Use Switch -->
    <RelativeLayout
        android:id="@+id/row_commercial_use"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/sw_allow_commercial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:checked="false"
            android:textOff="@string/answer_no"
            android:textOn="@string/answer_yes" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/info_license_comm"
            android:textAppearance="?android:attr/textAppearanceSmall"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>


    <!-- License URL -->
    <LinearLayout
        android:layout_marginTop="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_license_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/colorTertiary"
            tools:text="https://creativecommons.org" />

        <TextView
            android:id="@+id/bt_learn_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/learn_more_about_creative_commons"
            android:textColor="@color/colorTertiary" />

    </LinearLayout>



</LinearLayout>
